--- a/settings.gradle
+++ b/settings.gradle
@@ -3,8 +3,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "todo"
 include ':app'
+include ':core_mvi'
