--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -17,6 +18,9 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+    }
+    buildFeatures {
+        viewBinding true
     }
     buildTypes {
         release {
@@ -35,13 +39,14 @@ android {
 }
 
 dependencies {
+    implementation(project(":core_mvi"))
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
-
-    implementation 'com.airbnb.android:mavericks:2.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
